internal/gatewayapi/testdata/httproute-with-multiple-gateways-from-same-ns.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      name: gateway-a
      namespace: envoy-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: default
          port: 80
          protocol: HTTP
          hostname: '*.a.example.com'
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      name: gateway-b
      namespace: envoy-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: default
          port: 80
          protocol: HTTP
          hostname: '*.b.example.com'
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: targeted-route
      namespace: envoy-gateway
    spec:
      hostnames:
        - targeted.a.example.com
        - targeted.b.example.com
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: gateway-a
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: gateway-b
      rules:
        - matches:
            - method: GET
              path:
                type: PathPrefix
                value: /toy
